--- a/WebApplication1/Site1.Master
+++ b/WebApplication1/Site1.Master
@@ -2,8 +2,7 @@
 
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 <head runat="server">
 
 <title></title>
@@ -14,6 +13,7 @@
         padding-left: initial;
 
     }
+
 
     
 </style>
@@ -27,8 +27,15 @@
        
         
               <div class="jumbotron">
-              <h1 class="display-4">Hello, world!</h1>
-              <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+              <h1 class="display-4">Welcome To Inland Marina</h1>
+              <p class="lead">Welcome to Inland Marina located on the south shore Inland Lake, just a small commute from major
+                centers in the south west.
+                Inland Marina was established in the 1967 shortly after Inland Lake was created as a result of the South
+                West damn. From its humble beginnings, it has grown to be the largest marina on Inland Lake. Due to
+                the warm climate that extends year-round, Inland Lake has become a popular tourist destination in the
+                south west. Boat owners from California, Arizona, Nevada, and Utah are attracted to the area. Inland
+                Marina has 90 slips ranging in size from 16 to 32 feet in length. Dock services include electrical and
+                fresh water.                </p>
               <hr class="my-4">
               <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
               <p class="lead">
@@ -43,14 +50,7 @@
 
               </a>
               </p>
-              </div>
-
-
-      
-            
-
-         
-     
+              </div>    
 
         <div>
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
