--- a/WebApplication1/Site1.Master
+++ b/WebApplication1/Site1.Master
@@ -16,20 +16,39 @@
 </head>   
  <body>
      
-     <form id="form1" runat="server">
-      <img src="images/inlandmarina_banner.jpg" /><asp:BulletedList ID="BulletedList1" runat="server" DisplayMode="HyperLink"
-                            CssClass="nav nav-pills nav-stacked">
+                                 <form id="form1" runat="server">
+                                 <div class="banner" />
+                                 <img src="images/inlandmarina_banner.jpg" /><img src="images/inlandmarina_banner.jpg" />
+                                 
+                    
+                                   <ul>
+                                      <li><a href="HomePage.aspx">Home</a></li>
+                                      <li><a href="ContactUs.aspx">Contact Us</a></li>
+                                      <li><a href="Registration.aspx">Registration</a></li>
+                                      <li><a href="LeaseSlipPage.aspx">Lease Slip Page</a></li>
+                                      <li style="float:right"><a class="active" href="#about">About</a></li>
+                                    </ul>
+
+
+
+
+<%--                               <asp:BulletedList ID="BulletedList1" runat="server" DisplayMode="HyperLink" CssClass="nav nav-pills nav-stacked">
+                            
                          <asp:ListItem Value="~/homePage.aspx">Home  </asp:ListItem>
+                                   
                        <asp:ListItem Value="~/DockPage.aspx">Dock Page  </asp:ListItem>
+                                   
                      <asp:ListItem Value="~/Registration_page.aspx">Registration  </asp:ListItem>
+                                   
                    <asp:ListItem Value="~/ContactUs.aspx">Contact Us  </asp:ListItem>
-                 </asp:BulletedList>
+
+                 </asp:BulletedList>--%>
     
          
 
-                  &nbsp;<div class="jumbotron">
-                   <h1 class="display-4">Welcome To Inland Marina</h1>
-                 <p class="lead">Welcome to Inland Marina located on the south shore Inland Lake, just a small commute from major
+                 &nbsp;<div class="jumbotron">
+                <h1 class="display-4">Welcome To Inland Marina</h1>
+                <p class="lead">Welcome to Inland Marina located on the south shore Inland Lake, just a small commute from major
                 centers in the south west.
                 Inland Marina was established in the 1967 shortly after Inland Lake was created as a result of the South
                 West damn. From its humble beginnings, it has grown to be the largest marina on Inland Lake. Due to
@@ -38,18 +57,18 @@
                 Marina has 90 slips ranging in size from 16 to 32 feet in length. Dock services include electrical and
                 fresh water.
                 </p>
-                  <hr class="my-4">
-                    <p>
+                <hr class="my-4">
+                <p>
+                </div> 
+         
 
-         
-        
-        </div>    
         <div>
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">    
-          </asp:ContentPlaceHolder>
-          </div>
+          <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">    
+           </asp:ContentPlaceHolder>
+            </div>
          
-          <footer class="text-center text-info">  
+         
+            <footer class="text-center text-info">  
           </footer>  
 	
 	
@@ -64,10 +83,10 @@
 				
 			
 				
-				</div>
+			    	</div>
 
 				<p class="footer-links">
-					<a href="index.php">Home</a>
+					<a href="#">Home</a>
 					·
 					<a href="#">Dock Page</a>
 					·
