--- a/WebApplication1/Site1.Master
+++ b/WebApplication1/Site1.Master
@@ -24,16 +24,12 @@
                                    <ul>
                                       <li><a href="HomePage.aspx">Home</a></li>
                                       <li><a href="ContactUs.aspx">Contact Us</a></li>
+                                       <li><a href="DockPage.aspx">Dock Page</a></li>
                                       <li><a href="Registration.aspx">Registration</a></li>
+                                       <li><a href="Login.aspx">Log in</a></li>
                                       <li style="float:right"><a class="active" href="#about">About</a></li>
                                     </ul>
-
-
-
-
-
-    
-         
+        
 
                  &nbsp;<div class="jumbotron">
                 <h1 class="display-4">Welcome To Inland Marina</h1>
