--- a/WebApplication1/marina.css
+++ b/WebApplication1/marina.css
@@ -25,22 +25,27 @@
 
 }
 
-banner{
-    display:inline-block;
+.banner-boat {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    text-align: center;
 }
-
-/*//navigation style*/
-ul {
+    /*//navigation style*/
+    ul 
+    {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
-}
+    }
 
 li {
     float: left;
-}
+   }
 
     li a {
         display: block;
@@ -55,7 +60,7 @@ li {
         }
 
 .active {
-    background-color: #4CAF50;
+    background-color: black;
 }
 
 /*footer design*/
