--- a/WebApplication1/marina.css
+++ b/WebApplication1/marina.css
@@ -22,7 +22,12 @@
 .content-text{
     font-size:large;
     color:cornflowerblue;
+    
 
+}
+
+media {
+    text-align: left;
 }
 
 .banner-boat {
