--- a/WebApplication1/Site1.Master
+++ b/WebApplication1/Site1.Master
@@ -12,7 +12,7 @@
     <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
     <style>
    
-</style>
+    </style>
 
 </head>
 <body>
@@ -81,12 +81,11 @@
 
                 </p>
 
-                <p class="footer-company-name">InLand Marina LTD. &copy; 2019-2020</p>
-
+                <p class="footer-company-name">InLand Marina LTD. &copy; 2019-2020 Purple Group Co.</p>
+               
             </div>
             <div class="footer-center">
-
-                <div>
+            <div>
 
 
                     <i class="fa fa-map-marker"></i>
@@ -100,7 +99,7 @@
 
                 <div>
                     <i class="fa fa-envelope"></i>
-                    <p><a href="mailto:support@company.com">info@inlandmarina.com</a></p>
+                    <p><a href="mailto:support@company.com">infoinfo@inlandmarina.com</a></p>
                     <br>
                     <!-- <p><img height="110" width="100" src="images/expedia.png"></p> -->
                 </div>
@@ -110,15 +109,18 @@
                 <p class="footer-company-about">
                     New Life, New Discoveries, and many more sweet memories. Bon Voyage!
                 </p>
-            </div>
-            <div class="footer-icons">
+                <p class="footer-company-about">
+                    &nbsp;</p>
+                <p class="footer-company-about">
+                    &nbsp;</p>
+                <p class="footer-company-about">
+                    &nbsp;</p>
+           
                 <div>
+                <asp:Image ID="PoweredByImage" runat="server" ImageUrl="images/poweredbyaspnet.gif" /> 
                 </div>
-            </div>
-            <div id="footerContent">
-                <p class="para">Purple Group Co.</p>
-                <asp:Image ID="PoweredByImage" runat="server" ImageUrl="images/poweredbyaspnet.gif" />
-            </div>
+              </div>     
+          
 
         </footer>
     </form>
